Diseño responsive de la pagina login
Funciona para tablet no funciona el codigo de celular, hay que modificarlo

--- a/css/styles.css
+++ b/css/styles.css
@@ -214,6 +214,7 @@ img.h-100 {
   box-shadow: 30px black;
 }
 
+
 #carrito {
   width: 50%;
   height: 50%;
@@ -235,4 +236,22 @@ img.h-100 {
 
 #breadcrumb-cat {
   padding-left: 10%;
+}
+
+@media screen and (max-width: 768px) {
+  .identificadorContainer{
+    margin-top: 40%;
+  }
+}
+
+@media screen and (max-width: 320px) {
+  .identificadorContainer{
+    margin-top: 40%;
+  }
+  form{
+    text-align: center;
+  }
+  #botonLogin{
+    text-align: center;
+  } 
 }
