--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ img.h-100 {
 #login {
   width: 40%;
   height: 80%;
-  box-sizing: border-box;
+  box-sizing: content-box;
   padding: 40px;
   margin: auto;
   margin-top: 10%;
