--- a/css/styles.css
+++ b/css/styles.css
@@ -197,7 +197,7 @@ img.h-100 {
 #login {
   width: 40%;
   height: 80%;
-  box-sizing: border-box;
+  box-sizing: content-box;
   padding: 40px;
   margin: auto;
   margin-top: 10%;
@@ -213,7 +213,6 @@ img.h-100 {
   font-weight: bolder;
   box-shadow: 30px black;
 }
-
 
 #carrito {
   width: 50%;
@@ -247,16 +246,6 @@ img.h-100 {
 @media screen and (max-width: 320px) {
   .identificadorContainer{
     margin-top: 40%;
-  }
-  .form-label{
-    text-align: center;
-    font-size:  60%;
-  }
-  #botonLogin2{
-    text-align: center;
-    font-size: 40%;
-  } 
-  .container{
-    font-size: 60%;
-  }
+
+}
 }
