--- a/css/styles.css
+++ b/css/styles.css
@@ -269,7 +269,7 @@ img.h-100 {
   width: 1em;
   font-size: 30px;
   font-weight: 300;
-  color: #FFD600;
+  color: #ffcc00;
   cursor: pointer
 }
 
@@ -291,7 +291,6 @@ img.h-100 {
 .rating:hover>input:checked~label:before {
   opacity: 0.4
 }
-
 
 
 
