--- a/css/styles.css
+++ b/css/styles.css
@@ -341,3 +341,13 @@ img.h-100 {
 #finalizar-compra{
   margin-top: 5%;
 }
+
+.alert-overlay{
+  position: fixed;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  z-index: 1050; 
+  width: 90%;
+  max-width: 500px;
+}
